[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "_telemetry_stream"
version = "0.0.2"
description="Python bindings for Telemetry_Stream from MavSDK"
readme = "README.md"
authors = [
  { name = "Swabhan Katkoori", email = "katkoor4@msu.edu" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
sdist.exclude = ["docs/"]